<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/select_happy"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="152dp"
        android:layout_marginBottom="0dp"
        android:text="@string/happy"
        app:layout_constraintBottom_toTopOf="@+id/select_relaxed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/select_relaxed"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:text="@string/relaxed"
        app:layout_constraintBottom_toTopOf="@+id/select_sad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_happy"/>

    <Button
        android:id="@+id/select_sad"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="64dp"
        android:text="@string/sad"
        app:layout_constraintBottom_toTopOf="@+id/select_angry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_relaxed" />

    <Button
        android:id="@+id/select_angry"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="152dp"
        android:text="@string/angry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_sad" />

</androidx.constraintlayout.widget.ConstraintLayout>